--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Check-out</li>
+    </ul>
+<header>
+        
+</header>
     
 </body>
 </html>
