--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+        <header>
+        <h1>Webbshopp</h1>
+        </header>
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Check-out</li>
+        <li>Hem</li>
+        <li>Kundkorg</li>
     </ul>
-<header>
-        
-</header>
+
     
 </body>
 </html>
