--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
         <header>
+        
         <h1>Webbshopp</h1>
         </header>
     <ul>
-        <li>Hem</li>
+        <li><a href="start.html"></a>Hem</li>
         <li>Kundkorg</li>
     </ul>
-
-    
 </body>
 </html>
