--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Webbshopp</h1>
         </header>
     <ul>
-        <li><a href="start.html"></a>Hem</li>
+        <li><a href="start.html">Hem</a></li>
         <li>Kundkorg</li>
     </ul>
 </body>
