--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
     <ul>
         <li><a href="start.html">Hem</a></li>
-        <li>Kundkorg</li>
+        <li><a href="Kundkorg.html">Kundkorg</a></li>
     </ul>
 </body>
 </html>
