--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <li><a href="start.html">Hem</a></li>
         <li><a href="Kundkorg.html">Kundkorg</a></li>
     </ul>
+    <footer class="footer"><a href="#">CSS Validering(Fixa logga)</a><a href="#">HTML Validering(Fixa logga)</a></footer>
 </body>
 </html>
