--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
     <ul>
         <li><a href="start.html">Hem</a></li>
-        <i class="fa fa-shopping-cart fa-2x"></i>
+        <a href="Kundkorg.html"><i class="fa fa-shopping-cart fa-2x"></i></a>
     </ul>
     <footer class="footer"><a href="#">CSS Validering(Fixa logga)</a><a href="#">HTML Validering(Fixa logga)</a></footer>
 </body>
