--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <title>Document</title>
 </head>
 <body>
-        <header>
-        
-        <h1>Webbshopp</h1>
-        </header>
-    <ul>
-        <li><a href="start.html">Hem</a></li>
-        <a href="Kundkorg.html"><i class="fa fa-shopping-cart fa-2x"></i></a>
-    </ul>
+    <header>
+        <nav>
+            <h1>Webbshopp</h1>
+            <ul>        
+                <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
+                <a href="Kundkorg.html"><i class="fa fa-shopping-cart fa-2x"></i></a>
+            </ul>     
+        </nav>    
+    </header>
+    
     <footer class="footer"><a href="#">CSS Validering(Fixa logga)</a><a href="#">HTML Validering(Fixa logga)</a></footer>
 </body>
 </html>
