--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <title>Document</title>
 </head>
 <body>
+        
     <header>
+            
         <nav>
+            <div class="Logga">
+            <a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a>
+            </div>
             <h1>Webbshopp</h1>
             <ul>        
                 <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
