--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         </nav>    
     </header>
     
-    <footer class="footer"><a href="#">CSS Validering(Fixa logga)</a><a href="#">HTML Validering(Fixa logga)</a></footer>
+    <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/">CSS Validering(Fixa logga)</a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a></footer>
 </body>
 </html>
