--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <header>
             
         <nav>
-            <div class="Logga">
-            <a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a>
+<!--            <div class="Logga">
+            
             </div>
-            <h1>Webbshopp</h1>
-            <ul>        
-                <a href="index.html"><i class="fa fa-home fa-2x"></i></a>
-                <a href="Kundkorg.html"><i class="fa fa-shopping-cart fa-2x"></i></a>
+        -->
+            <ul>
+                <li><a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a></li>        
+                <li><h1>Webbshopp</h1></li>
+                <li><a href="index.html"><i class="fa fa-home fa-2x"></i></a></li>
+                <li><a href="Kundkorg.html"><i class="fa fa-shopping-cart fa-2x"></i></a></li>
             </ul>       
         </nav>    
     </header>
