--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -19,13 +19,13 @@
         -->
             <ul>
                 <li><a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a></li>        
-                <li><h1>Webbshopp</h1></li>
-                <li><a href="index.html"><i class="fa fa-home fa-2x"></i></a></li>
-                <li><a href="Kundkorg.html"><i class="fa fa-shopping-cart fa-2x"></i></a></li>
+                <li><h1 class="main-header">Webbshopp</h1></li>
+                <li><a href="index.html"><!--<i class="fa fa-home fa-2x"></i>--><img class="icon" src="./images/cart.png"></a></li>
+                <li><a href="Kundkorg.html"><!--<i class="fa fa-shopping-cart fa-2x"></i>--></a></li>
             </ul>       
         </nav>    
     </header>
     
-    <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/">CSS Validering(Fixa logga)</a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a></footer>
+    <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
 </body>
 </html>
