--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -25,7 +26,20 @@
             </ul>       
         </nav>    
     </header>
-    
+
+<main>
+    <img class="nature" src="/Bilder/Animals.jpg">
+    <img class="nature" src="Bilder/Cartman.jpg">
+    <img class="nature" src="/Bilder/Ikea.jpg">
+
+    <p>
+    <button onclick="myShow.previous()">Föregående</button>
+    <button onclick="myShow.next()">Nästa</button>
+    </p>
+    <script>
+        myShow = w3.slideshow(".nature", 0);
+    </script>
+</main>
     <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/">CSS Validering(Fixa logga)</a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a></footer>
 </body>
 </html>
