--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
             </ul>       
         </nav>    
     </header>
-<<<<<<< HEAD
 
 <main>
-    <img class="nature" src="/Bilder/Animals.jpg">
-    <img class="nature" src="Bilder/Cartman.jpg">
-    <img class="nature" src="/Bilder/Ikea.jpg">
+    <img class="nature" src="./images/Animals.jpg">
+    <img class="nature" src="./images/Cartman.jpg">
+    <img class="nature" src="./images/Ikea.jpg">
 
     <p>
     <button onclick="myShow.previous()">Föregående</button>
@@ -42,9 +41,5 @@
     </script>
 </main>
     <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/">CSS Validering(Fixa logga)</a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a></footer>
-=======
-    
-    <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
->>>>>>> 0f76d80154f9d140234e159113e3cbff6e05d6cd
 </body>
 </html>
