--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
     </header>
 
 <main>
+    <div>
+    <div>
     <img class="nature" src="./images/Animals.jpg">
     <img class="nature" src="./images/Cartman.jpg">
     <img class="nature" src="./images/Ikea.jpg">
+    </div>  
 
     <p>
     <button onclick="myShow.previous()">Föregående</button>
     <button onclick="myShow.next()">Nästa</button>
     </p>
+    </div>
     <script>
         myShow = w3.slideshow(".nature", 0);
     </script>
