--- a/produkt-kod-for-enskild-produkt.html
+++ b/produkt-kod-for-enskild-produkt.html
@@ -6,7 +6,19 @@
     </head>
     <body>
         <div class="produkt">
-            <img src="#" alt="Produkt byt text">
+            <img src="./images/Cartman.jpg" alt="Produkt byt text">
+            <p class="produkt-info">Produktbeskrivning</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button>Köp Nu</button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/Animals.jpg" alt="Produkt byt text">
+            <p class="produkt-info">Produktbeskrivning</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button>Köp Nu</button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/Ikea.jpg" alt="Produkt byt text">
             <p class="produkt-info">Produktbeskrivning</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
