--- a/produkt-kod-for-enskild-produkt.html
+++ b/produkt-kod-for-enskild-produkt.html
@@ -23,5 +23,11 @@
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
         </div>
+        <div class="produkt">
+            <img src="./images/Ikea.jpg" alt="Produkt byt text">
+            <p class="produkt-info">Produktbeskrivning</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button>Köp Nu</button></p>
+        </div>
     </body>
 </html>
