--- a/kundkorg.html
+++ b/kundkorg.html
@@ -28,21 +28,27 @@
     
 <div class="kundkorg">
     <div class="kundkorg-produkt">
-        <h3 class="kundkorg-produkt-header">Produkt 1 i Kundkorgen</h3>
+        <img src="./images/ting.jpg" alt="Produktbild">
+        <h3 class="kundkorg-produkt-header">Ting som bär våra minnen.</h3>
         <p><span class="kundkorg-produkt-antal">Antal:</span></p>
         <button class="kundkorg-button">Ta bort ur kundkorgen</button>
     </div>
     <div class="kundkorg-produkt">
-        <h3 class="kundkorg-produkt-header">Produkt 2 i Kundkorgen</h3>
+        <img src="./images/vego.jpg" alt="Produktbild">
+        <h3 class="kundkorg-produkt-header">Jamie Oliver: Vego
+        Enkla & goda rätter för alla</h3>
         <p><span class="kundkorg-produkt-antal">Antal:</span></p>
         <button class="kundkorg-button">Ta bort ur kundkorgen</button>
     </div>
     <div class="kundkorg-produkt">
-        <h3 class="kundkorg-produkt-header">Produkt 3 i Kundkorgen</h3>
+        <img src="./images/stark.jpg" alt="Produktbild">
+        <h3 class="kundkorg-produkt-header">Stark hela livet
+            Bättre ork, minne, mående och hälsa med fysisk aktivitet</h3>
         <p><span class="kundkorg-produkt-antal">Antal:</span></p>
         <button class="kundkorg-button">Ta bort ur kundkorgen</button>
     </div>    <div class="kundkorg-produkt">
-        <h3 class="kundkorg-produkt-header">Produkt 4 i Kundkorgen</h3>
+        <img src="./images/vagen.jpg" alt="Produktbild">
+        <h3 class="kundkorg-produkt-header">Vägen till hormonell balans</h3>
         <p><span class="kundkorg-produkt-antal">Antal:</span></p>
         <button class="kundkorg-button">Ta bort ur kundkorgen</button>
     </div>
