--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
         <nav>
             <ul>
-                <li><a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a></li>        
+                <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
                 <li><h1 class="main-header">Webbshopp</h1></li>
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="Kundkorg.html"><img class="icon" src="./images/cart.png"></a></li>
