--- a/kundkorg.html
+++ b/kundkorg.html
@@ -18,15 +18,10 @@
             </div>
         -->
             <ul>
-                <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>
-                <li><a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a></li>        
+                <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
                 <li><h1 class="main-header">Webbshopp</h1></li>
-<<<<<<< HEAD
-                <li><a href="index.html">Hem</a></li>
-=======
-                <li><a href="index.html"><!--<i class="fa fa-home fa-2x"></i>--></a></li>
+                <li><a href="index.html">hem</a></li>
                 <li><a href="produkter.html"></a></li>
->>>>>>> 07234a02db4a11b08eb48091ef3422847ea36d78
                 <li><a href="Kundkorg.html"><!--<i class="fa fa-shopping-cart fa-2x"></i>--><img class="icon" src="./images/cart.png"></a></li>
             </ul>       
         </nav>    
