--- a/kundkorg.html
+++ b/kundkorg.html
@@ -20,8 +20,8 @@
                 <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
                 <li><h1 class="main-header">Webbshopp</h1></li>
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="produkter.html"></a></li>
-                <li><a href="Kundkorg.html"><!--<i class="fa fa-shopping-cart fa-2x"></i>--><img class="icon" src="./images/cart.png"></a></li>
+                <li><a href="produkter.html"><img class="icon" src="./images/Shop.png"></a></li>
+                <li><a href="Kundkorg.html"><img class="icon" src="./images/cart.png"></a></li>
             </ul>       
         </nav>    
     </header>
