--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
                 <li><h1 class="main-header">Webbshopp</h1></li>
                 <li><a href="index.html">Hem</a></li>
+                <li><a href="produkter.html">Produkter</a></li>
                 <li><a href="Kundkorg.html"><img class="icon" src="./images/cart.png"></a></li>
             </ul>       
         </nav>    
