--- a/kundkorg.html
+++ b/kundkorg.html
@@ -19,15 +19,9 @@
             <ul>
                 <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
                 <li><h1 class="main-header">Webbshopp</h1></li>
-<<<<<<< HEAD
-                <li><a href="index.html">hem</a></li>
-                <li><a href="produkter.html">Produkter</a></li>
-                <li><a href="Kundkorg.html"><!--<i class="fa fa-shopping-cart fa-2x"></i>--><img class="icon" src="./images/cart.png"></a></li>
-=======
-                <li><a href="index.html">Hem</a></li>
+                <li><a href="index.html"><img class="icon" src="./images/Home.jpg"></a></li>
                 <li><a href="produkter.html"><img class="icon" src="./images/Shop.png"></a></li>
                 <li><a href="Kundkorg.html"><img class="icon" src="./images/cart.png"></a></li>
->>>>>>> 5352b0eab54c9c2141ed6a3267ea3819e084d35f
             </ul>       
         </nav>    
     </header>
