--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         myShow = w3.slideshow(".nature", 0);
     </script>
 </main>
-    <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/">CSS Validering(Fixa logga)</a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a></footer>
+    <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/" img src=""></a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a>
+    
+    </footer>
 </body>
 </html>
