--- a/template.html
+++ b/template.html
@@ -14,10 +14,10 @@
             
         <nav>
             <ul>
-                <li><a href="Logga.html"><i class="fa fa-battle-net fa-3x"></i></a></li>        
+                <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
                 <li><h1 class="main-header">Webbshopp</h1></li>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="produkter.html">Produkter</a></li>
+                <li><a href="index.html"><img class="icon" src="./images/Home.jpg"></a></li>
+                <li><a href="produkter.html"><img class="icon" src="./images/Shop.png"></a></li>
                 <li><a href="Kundkorg.html"><img class="icon" src="./images/cart.png"></a></li>
             </ul>       
         </nav>    
