--- a/fika.html
+++ b/fika.html
@@ -22,7 +22,18 @@
             </ul>       
         </nav>    
     </header>
-    
+    <div class="produkt">
+            <img src="./images/fika.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Fika är livet</p>
+            <p class="produkt-info">Om man älskar när vännerna kommer på fika är det inte så dumt att snabbt kunna sno ihop en kaka, en paj eller – om det är extra festligt – en härlig sommartårta. Särskilt inte när man som jag bor på landet och gästerna kan ha åkt långt. Fort ska det gå, och det får inte vara alltför komplicerat.
+
+                    Här bjuder jag på några av recepten från Hela Sverige bakar, men också familjerecept med anor, mina personliga konditorifavoriter, och några klassiker med egen twist.
+                    Så kavla upp ärmarna och ta på förklädet, sätt på en riktigt bra låt, och sjung med medan doften av nybakat sprider sig i köket!
+                    Detaljerad fakta
+                    </p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button>Köp Nu</button></p>
+        </div>
     <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
 </body>
 </html>
