--- a/vagen.html
+++ b/vagen.html
@@ -22,7 +22,13 @@
             </ul>       
         </nav>    
     </header>
-    
+    <div class="produkt">
+            <img src="./images/vagen.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Vägen till Hormonell balans</p>
+            <p class="produkt-info">Hjärnkoll, sexlust och välmående genom förklimakteriet och klimakteriet</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button>Köp Nu</button></p>
+        </div>
     <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
 </body>
 </html>
