--- a/stark.html
+++ b/stark.html
@@ -23,9 +23,9 @@
         </nav>    
     </header>
     <div class="produkt">
-            <img src="./images/to.jpg" alt="Produkt byt text">
-            <p class="produkt-namn">To love and let go</p>
-            <p class="produkt-info">Nu på svenska: Yogagirl skriver sin personliga berättelse om kärlek, förlust och tacksamhet. Rachel Brathen har inspirerat en hel yogavärld men under ytan finns en kamp som vi endast kunnat läsa i korta instagraminlägg. Här delar Rachel öppenhjärtigt med sig av sin gripande och inspirerande historia. Vi kommer närmare än någonsin förr när hon delar såväl förluster, ångest- och missbruksproblematik som starka upplevelser av det fina i livet. Från förlusten av sin bästa vän, sin mormors död och mors självmordsförsök till djup depression. När hon upptäcker att hon är gravid bestämmer hon sig för att göra allt hon kan för att bli hel igen. Rachel bjuder in läsaren till en fantastisk berättelse om en människas inneboende kraft att ta sig tillbaka till ett meningsfullt och vackert liv.</p>
+            <img src="./images/stark.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Stark Hela livet</p>
+            <p class="produkt-info">Bromsa åldrandet idag med fysisk aktivitet! Forskningen visar nämligen att regelbunden träning är en mirakelmedicin. Få ett bättre flås och en starkare kropp samtidigt som du blir smartare, gladare och bättre håller vikten. Du kommer att få ett friskare hjärta, starkare skelett, jämnare blodsocker och minska risken för t ex cancer och demens. På köpet gör träningen dessutom att du känner dig lugnare och får en bättre sömn. I Stark hela livet har forskarna Jessica Norrbom och Carl Johan Sundberg samlat fakta, studier och råd för att hjälpa dig leva ett längre och friskare liv med varaktig träning. Kom ihåg att åldern är mycket mer än en siffra!</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
         </div>
