--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <main>
     <div>
     <div>
-    <img class="nature" src="./images/Animals.jpg">
-    <img class="nature" src="./images/Cartman.jpg">
-    <img class="nature" src="./images/Ikea.jpg">
+    <img class="nature" src="./images/to.jpg">
+    <img class="nature" src="./images/fika.jpg">
+    <img class="nature" src="./images/morberg.jpg">
     </div>  
 
     <p>
@@ -41,8 +41,6 @@
         myShow = w3.slideshow(".nature", 0);
     </script>
 </main>
-    <footer class="footer"><a href="https://jigsaw.w3.org/css-validator/" img src=""></a><a href="https://validator.w3.org/">HTML Validering(Fixa logga)</a>
-    
-    </footer>
+<footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
 </body>
 </html>
