--- a/template.html
+++ b/template.html
@@ -23,6 +23,6 @@
         </nav>    
     </header>
     
-    <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
+    <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/"><img class="icon" src="./images/CSS.png"></a> , <a href="https://validator.w3.org/"><img class="icon" src="./images/Html.png"></a></footer>
 </body>
 </html>
