--- a/produkter.html
+++ b/produkter.html
@@ -30,35 +30,35 @@
             <p class="produkt-info">Dina och Jovan Rajs föddes i forna Jugoslavien och deras uppväxt präglades av förintelsen. Dina som gömd med falska identitetshandlingar och i ständig rädsla för att bli upptäckt, Jovan både som gömd och som fånge i flera koncentrationsläger. Här berättar de sin historia genom ting som de burit med sig genom livet. Det är saker som vid första anblick kan te sig triviala, men som tillsammans vittnar om ett liv som överlevande. En papperslapp, ett släktfoto, en förlovningsring, ett schackspel – saker som gömdes när de tvingades lämna sina hem. Saker som påverkat deras sätt att tänka och känna, som påminner om deras historia och som format dem genom livet.
                 </p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="ting.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
             <img src="./images/vego.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Jamie Oliver:Vego</p>
             <p class="produkt-info">Jamie Oliver – den internationellt bästsäljande kokboksförfattaren – är tillbaka med VEGO, en bok med fantastiska växtbaserade rätter. Fler och fler av oss vill äta mer grönt, det kan vara av hälsoskäl, för att minska utgifterna eller för planetens skull. De här genialiskt enkla recepten har hämtat inspiration från hela världen och är en hyllning till de ödmjuka och underbara grönsakerna. Du kommer att lämna matbordet mätt, tillfreds och glad – utan att du har saknat köttet på tallriken. Oavsett om du tänker dig en eller två köttfria dagar i veckan eller vill bli vegetarian, eller om du bara vill testa några nya briljanta smakkombinationer – det här är boken för dig.</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="vego.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
             <img src="./images/stark.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Stark Hela livet</p>
             <p class="produkt-info">Bromsa åldrandet idag med fysisk aktivitet! Forskningen visar nämligen att regelbunden träning är en mirakelmedicin. Få ett bättre flås och en starkare kropp samtidigt som du blir smartare, gladare och bättre håller vikten. Du kommer att få ett friskare hjärta, starkare skelett, jämnare blodsocker och minska risken för t ex cancer och demens. På köpet gör träningen dessutom att du känner dig lugnare och får en bättre sömn. I Stark hela livet har forskarna Jessica Norrbom och Carl Johan Sundberg samlat fakta, studier och råd för att hjälpa dig leva ett längre och friskare liv med varaktig träning. Kom ihåg att åldern är mycket mer än en siffra!</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="stark.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
             <img src="./images/vagen.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Vägen till Hormonell balans</p>
             <p class="produkt-info">Hjärnkoll, sexlust och välmående genom förklimakteriet och klimakteriet</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="vagen.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
             <img src="./images/to.jpg" alt="Produkt byt text">
             <p class="produkt-namn">To love and let go</p>
             <p class="produkt-info">Nu på svenska: Yogagirl skriver sin personliga berättelse om kärlek, förlust och tacksamhet. Rachel Brathen har inspirerat en hel yogavärld men under ytan finns en kamp som vi endast kunnat läsa i korta instagraminlägg. Här delar Rachel öppenhjärtigt med sig av sin gripande och inspirerande historia. Vi kommer närmare än någonsin förr när hon delar såväl förluster, ångest- och missbruksproblematik som starka upplevelser av det fina i livet. Från förlusten av sin bästa vän, sin mormors död och mors självmordsförsök till djup depression. När hon upptäcker att hon är gravid bestämmer hon sig för att göra allt hon kan för att bli hel igen. Rachel bjuder in läsaren till en fantastisk berättelse om en människas inneboende kraft att ta sig tillbaka till ett meningsfullt och vackert liv.</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="to.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
             <img src="./images/fika.jpg" alt="Produkt byt text">
@@ -70,7 +70,7 @@
                     Detaljerad fakta
                     </p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="fika.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
             <img src="./images/morberg.jpg" alt="Produkt byt text">
@@ -83,7 +83,7 @@
                     
                     Per Morberg</p>
             <p class="pris">Pris: 100 SEK</p>
-            <p><button>Köp Nu</button></p>
+            <p><button><a href="morberg.html">Läs mer</a></button></p>
         </div>
         <div class="produkt">
                 <img src="./images/prepp.jpg" alt="Produkt byt text">
@@ -93,14 +93,14 @@
                         Precis som i Ylva Bergqvists senaste bok "Vego på 30 minuter" är rätterna lättlagade och smaksäkert komponerade med inspiration från hela världen. Så vänta inte! Ta fram kastrullerna och börja preppa. Livet blir så mycket enklare – och godare.
                         Detaljerad fakta</p>
                 <p class="pris">Pris: 100 SEK</p>
-                <p><button>Köp Nu</button></p>
+                <p><button><a href="prepp.html">Läs mer</a></button></p>
             </div>
             <div class="produkt">
                     <img src="./images/under.jpg" alt="Produkt byt text">
                     <p class="produkt-namn">Underbart</p>
                     <p class="produkt-info">Hur kom det sig att korsetten fick evigt liv? Vågar man verkligen shoppa underkläder på nätet? Var hittar man egentligen den perfekta behån och vad bör man tänka på när man provar ut den? Och hur ska man bli snygg i den tajta slinkiga klänningen när magen putar och låren känns fladdriga? I Underbart ger Karina Ericsson Wärn tips och råd om hur man grundar rätt. Hon kikar in under kjolarna på bruden, frossar i sexiga strumpor, praktiska gördlar, sensuella sköna vardagsbehåar och olika kroppsformer. Hon gör en genomgång av underklädernas spännande historia, fördjupar sig i korsettens fasta grepp samt porträtterar några av underklädesvärldens viktigaste namn som Chantal Thomass, Fifi Chachnil och Agent Provocateur. Rikligt med bilder och en nätshoppingguide som tipsar om sköna boudoirer, minimalistiska märken, stödjande specialister är också en god hjälp för den som vill göra livet under lite enklare och kanske lite flärdfullare.</p>
                     <p class="pris">Pris: 100 SEK</p>
-                    <p><button>Köp Nu</button></p>
+                    <p><button><a href="under.html">Läs mer</a></button></p>
                 </div>
     <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
 </body>
