--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     </header>
 
 <main>
-    <div>
-    <div>
-    <img class="nature" src="./images/to.jpg">
-    <img class="nature" src="./images/fika.jpg">
-    <img class="nature" src="./images/morberg.jpg">
-    </div>  
+    <div class="imagebox">
+        <div>
+        <img class="nature" src="./images/to.jpg">
+        <img class="nature" src="./images/fika.jpg">
+        <img class="nature" src="./images/morberg.jpg">
+        </div>  
 
-    <p>
-    <button onclick="myShow.previous()">Föregående</button>
-    <button onclick="myShow.next()">Nästa</button>
-    </p>
+        <div>
+        <button onclick="myShow.previous()">Föregående</button>
+        <button onclick="myShow.next()">Nästa</button>
+        </div>
     </div>
     <script>
         myShow = w3.slideshow(".nature", 0);
