--- a/produkter.html
+++ b/produkter.html
@@ -102,6 +102,6 @@
                     <p class="pris">Pris: 100 SEK</p>
                     <p><button><a href="under.html">Läs mer</a></button></p>
                 </div>
-    <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/">CSS</a> , <a href="https://validator.w3.org/">HTML</a></footer>
+                <footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/"><img class="icon" src="./images/CSS.png"></a> , <a href="https://validator.w3.org/"><img class="icon" src="./images/Html.png"></a></footer>
 </body>
 </html>
