--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <body>
         
     <header>
-            
+        <div class="top">
+            <li><img class="topicon" src="./images/Book.png"></li>
+            <li><h1>Webbshop</h1></li>
+            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
+        </div>
         <nav>
-            <ul>
-                <li><a href="Logga.html"><img class="icon" src="./images/Book.png"></a></li>        
-                <li><h1 class="main-header">Webbshopp</h1></li>
-                <li><a href="index.html"><img class="icon" src="./images/Home.jpg"></a></li>
-                <li><a href="produkter.html"><img class="icon" src="./images/Shop.png"></a></li>
-                <li><a href="Kundkorg.html"><img class="icon" src="./images/cart.png"></a></li>
+            <ul>        
+                <li><a href="index.html">Startsida</a></li>
+                <li><a href="produkter.html">Produkter</a></li>
+                <li><a href="bla">Kategori</a></li>
             </ul>       
         </nav>    
     </header>
@@ -41,6 +43,6 @@
         myShow = w3.slideshow(".nature", 0);
     </script>
 </main>
-<footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/"><img class="icon" src="./images/CSS.png"></a> , <a href="https://validator.w3.org/"><img class="icon" src="./images/Html.png"></a></footer>
+<footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a> , <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a></footer>
 </body>
 </html>
