--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         myShow = w3.slideshow(".nature", 0);
     </script>
 </main>
-<footer class="footer">Validera<a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a> , <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a></footer>
+<footer class="footer">
+    <div class="Validate">
+        <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
+        <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
+    </div>
+</footer>
 </body>
 </html>
