--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>       
     </nav>  
 <main>
-    <div class="imagebox">
+    <!--div class="imagebox">
         <div>
         <img class="nature" src="./images/to.jpg">
         <img class="nature" src="./images/fika.jpg">
@@ -37,6 +37,16 @@
         <button onclick="myShow.previous()">Föregående</button>
         <button onclick="myShow.next()">Nästa</button>
         </div>
+    </div-->
+    <div class="imagebox">
+            <img class="nature" src="./images/to.jpg">
+            <img class="nature" src="./images/fika.jpg">
+            <img class="nature" src="./images/morberg.jpg">
+
+        <div id="left"><button onclick="myShow.previous()">Föregående</button></div>
+        <div id="right"><button onclick="myShow.next()">Nästa</button></div>
+    
+
     </div>
     <script>
         myShow = w3.slideshow(".nature", 0);
