--- a/morberg.html
+++ b/morberg.html
@@ -24,6 +24,7 @@
                     <li><a href="produkter.html">Produkter</a></li>
                 </ul>       
             </nav>
+            <div class="produktsida">
     <div class="produkt">
             <img src="./images/morberg.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Morberg Bakfickan</p>
@@ -37,6 +38,7 @@
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
         </div>
+    </div>
 
         <footer class="footer">
                 <div class="Validate">
