--- a/produkter.html
+++ b/produkter.html
@@ -25,6 +25,7 @@
                     <li><a href="produkter.html">Produkter</a></li>
                 </ul>       
             </nav>
+            <div class="produkter">
     <div class="produkt">
             <img src="./images/ting.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Ting som bär våra minnen</p>
@@ -103,6 +104,7 @@
                     <p class="pris">Pris: 100 SEK</p>
                     <p><button><a href="under.html">Läs mer</a></button></p>
                 </div>
+            </div>
 
                 <footer class="footer">
                         <div class="Validate">
