--- a/ting.html
+++ b/ting.html
@@ -24,6 +24,8 @@
                     <li><a href="produkter.html">Produkter</a></li>
                 </ul>       
             </nav>
+
+        <div class="produktsida">
     <div class="produkt">
             <img src="./images/ting.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Ting som bär våra minnen</p>
@@ -32,6 +34,7 @@
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
         </div>
+    </div>
 
         <footer class="footer">
                 <div class="Validate">
