--- a/vego.html
+++ b/vego.html
@@ -24,6 +24,7 @@
                     <li><a href="produkter.html">Produkter</a></li>
                 </ul>       
             </nav>
+            <div class="produktsida">
     <div class="produkt">
             <img src="./images/vego.jpg" alt="Produkt byt text">
             <p class="produkt-namn">Jamie Oliver:Vego</p>
@@ -31,7 +32,7 @@
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
         </div>
-
+    </div>
         <footer class="footer">
                 <div class="Validate">
                     <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
