--- a/ting.html
+++ b/ting.html
@@ -33,6 +33,7 @@
                 </p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
+            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
 
