--- a/fika.html
+++ b/fika.html
@@ -37,6 +37,7 @@
                     </p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
+            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
         <footer class="footer">
