--- a/morberg.html
+++ b/morberg.html
@@ -37,6 +37,7 @@
                     Per Morberg</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
+            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
 
