--- a/prepp.html
+++ b/prepp.html
@@ -34,6 +34,7 @@
                     Detaljerad fakta</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
+            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
 
