--- a/vagen.html
+++ b/vagen.html
@@ -31,6 +31,7 @@
             <p class="produkt-info">Hjärnkoll, sexlust och välmående genom förklimakteriet och klimakteriet</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
+            <p><button><a href="produkter.html">Tillbaka till produkter</a></button></p>
         </div>
     </div>
 
