--- a/fika.html
+++ b/fika.html
@@ -28,7 +28,13 @@
     <div class="produktsida">
     <div class="produkt">
             <img src="./images/fika.jpg" alt="Produkt byt text">
+            <h3>Författare</h3>
+            <p>Linda Hansson</p>
+            <h3>Utgivningsdatum</h3>
+            <p>2019-12-12</p>
+            <h3>Titel</h3>
             <p class="produkt-namn">Fika är livet</p>
+            <h3>Beskrivning</h3>
             <p class="produkt-info">Om man älskar när vännerna kommer på fika är det inte så dumt att snabbt kunna sno ihop en kaka, en paj eller – om det är extra festligt – en härlig sommartårta. Särskilt inte när man som jag bor på landet och gästerna kan ha åkt långt. Fort ska det gå, och det får inte vara alltför komplicerat.
 
                     Här bjuder jag på några av recepten från Hela Sverige bakar, men också familjerecept med anor, mina personliga konditorifavoriter, och några klassiker med egen twist.
