--- a/morberg.html
+++ b/morberg.html
@@ -27,7 +27,13 @@
             <div class="produktsida">
     <div class="produkt">
             <img src="./images/morberg.jpg" alt="Produkt byt text">
+            <h3>Författare</h3>
+            <p>Per Morberg</p>
+            <h3>Utgivningsdatum</h3>
+            <p>2019-11-07</p>
+            <h3>Titel</h3>
             <p class="produkt-namn">Morberg Bakfickan</p>
+            <h3>Beskrivning</h3>
             <p class="produkt-info">"Enkel, okonstlad, genuin. Sådan är maten på de matställen jag gillar bäst: kvarterskrogen, bistron, brasseriet, puben – och köket hemma på Tullgarn.
 
                     I min nya bok bjuder jag på ett femtiotal traditionella och otraditionella rätter inspirerade av den goda mat som serveras i generösa portioner på bakfickor med kvalitet. Joppes räksallad, steak minute med pommes frites, steambuns med kyckling, sjötunga Morbiére och citrontarte är några exempel. Och naturligtvis är min bakfickebok inte komplett utan pannbiff med lök.
