--- a/prepp.html
+++ b/prepp.html
@@ -27,7 +27,13 @@
             <div class="produktsida">
     <div class="produkt">
             <img src="./images/prepp.jpg" alt="Produkt byt text">
+            <h3>Författare</h3>
+            <p>Ylva Bergqvist</p>
+            <h3>Utgivningsdatum</h3>
+            <p>2019-08-06</p>
+            <h3>Titel</h3>
             <p class="produkt-namn">PREPP</p>
+            <h3>Beskrivning</h3>
             <p class="produkt-info">Preppa på söndag och slipp stressen kring vardagsmiddagarna! Med den här boken behöver du inte tänka ut vad du ska äta och springa och handla varje dag. Om du ägnar lite tid åt att förbereda får du maten på bordet på nolltid. I "PREPP" finns menyer med vegetariska recept för ett helt kvartal. Bambatantens bästa, Franska fläktar, Waste no waste ... Vilken blir din favoritvecka? Många recept är veganska eller kan enkelt justeras så att de blir det.
 
                     Precis som i Ylva Bergqvists senaste bok "Vego på 30 minuter" är rätterna lättlagade och smaksäkert komponerade med inspiration från hela världen. Så vänta inte! Ta fram kastrullerna och börja preppa. Livet blir så mycket enklare – och godare.
