--- a/vego.html
+++ b/vego.html
@@ -27,7 +27,13 @@
             <div class="produktsida">
     <div class="produkt">
             <img src="./images/vego.jpg" alt="Produkt byt text">
+            <h3>Författare</h3>
+            <p>Jamie Oliver</p>
+            <h3>Utgivningsdatum</h3>
+            <p>2020-01-07</p>
+            <h3>Titel</h3>
             <p class="produkt-namn">Jamie Oliver:Vego</p>
+            <h3>Beskrivning</h3>
             <p class="produkt-info">Jamie Oliver – den internationellt bästsäljande kokboksförfattaren – är tillbaka med VEGO, en bok med fantastiska växtbaserade rätter. Fler och fler av oss vill äta mer grönt, det kan vara av hälsoskäl, för att minska utgifterna eller för planetens skull. De här genialiskt enkla recepten har hämtat inspiration från hela världen och är en hyllning till de ödmjuka och underbara grönsakerna. Du kommer att lämna matbordet mätt, tillfreds och glad – utan att du har saknat köttet på tallriken. Oavsett om du tänker dig en eller två köttfria dagar i veckan eller vill bli vegetarian, eller om du bara vill testa några nya briljanta smakkombinationer – det här är boken för dig.</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
