--- a/stark.html
+++ b/stark.html
@@ -27,7 +27,13 @@
             <div class="produktsida">
     <div class="produkt">
             <img src="./images/stark.jpg" alt="Produkt byt text">
+            <h3>Författare</h3>
+            <p>Carl Johan Sundberg, Jessica Norrbom</p>
+            <h3>Utgivningsdatum</h3>
+            <p>2019-12-27</p>
+            <h3>Titel</h3>
             <p class="produkt-namn">Stark Hela livet</p>
+            <h3>Beskrivning</h3>
             <p class="produkt-info">Bromsa åldrandet idag med fysisk aktivitet! Forskningen visar nämligen att regelbunden träning är en mirakelmedicin. Få ett bättre flås och en starkare kropp samtidigt som du blir smartare, gladare och bättre håller vikten. Du kommer att få ett friskare hjärta, starkare skelett, jämnare blodsocker och minska risken för t ex cancer och demens. På köpet gör träningen dessutom att du känner dig lugnare och får en bättre sömn. I Stark hela livet har forskarna Jessica Norrbom och Carl Johan Sundberg samlat fakta, studier och råd för att hjälpa dig leva ett längre och friskare liv med varaktig träning. Kom ihåg att åldern är mycket mer än en siffra!</p>
             <p class="pris">Pris: 100 SEK</p>
             <p><button>Köp Nu</button></p>
