--- a/under.html
+++ b/under.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul>        
                     <li><a href="index.html">Startsida</a></li>
-                    <li><a href="produkter.html">Produkter</a></li>
+                    <li><a href="produkter.html">Böcker</a></li>
                 </ul>       
             </nav>
         <div class="produktsida">
