--- a/vagen.html
+++ b/vagen.html
@@ -22,6 +22,7 @@
                 <ul>        
                     <li><a href="index.html">Startsida</a></li>
                     <li><a href="produkter.html">Böcker</a></li>
+                    <li><a href="Verktyg.html">Verktyg</a></li>
                 </ul>       
             </nav>
             <div class="produktsida">
