--- a/produkter.html
+++ b/produkter.html
@@ -11,12 +11,10 @@
 <body>
         
     
-    <header>
-        <div class="top">
-            <li><img class="topicon" src="./images/Book.png"></li>
-            <li><h1>Webbshop</h1></li>
-            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
-        </div>       
+    <header class="top">
+            <img class="topicon" src="./images/Book.png">
+            <h1>Webbshop</h1>
+            <a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a>
     </header>
     <nav>
         <ul>        
