--- a/index.html
+++ b/index.html
@@ -43,10 +43,66 @@
             <img class="nature" src="./images/to.jpg">
             <img class="nature" src="./images/fika.jpg">
             <img class="nature" src="./images/morberg.jpg">
-        <div id="left"><button onclick="myShow.previous()">Föregående</button></div>
-        <div id="right"><button onclick="myShow.next()">Nästa</button></div>
+        <div id="left"><button onclick="myShow.previous()"><img  class="imagebox-buttons" src="./images/arrow-left.png" alt="Föregående bild"></button></div>
+        <div id="right"><button onclick="myShow.next()"><img  class="imagebox-buttons" src="./images/arrow-right.png" alt="Nästa bild"></button></div>
     
 
+    </div>
+    <div class="produkter">
+        <div class="produkt">
+            <img src="./images/ting.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Ting som bär våra minnen</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="ting.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/vego.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Jamie Oliver: Vego</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="vego.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/stark.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Stark Hela livet</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="stark.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/vagen.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">   Vägen till Hormonell balans </p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="vagen.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/to.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">To love and let go</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="to.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/fika.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Fika är livet</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="fika.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/morberg.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">Morberg Bakfickan</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="morberg.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+            <img src="./images/prepp.jpg" alt="Produkt byt text">
+            <p class="produkt-namn">PREPP</p>
+            <p class="pris">Pris: 100 SEK</p>
+            <p><button><a href="prepp.html">Läs mer</a></button></p>
+        </div>
+        <div class="produkt">
+                <img src="./images/under.jpg" alt="Produkt byt text">
+                <p class="produkt-namn">Underbart</p>
+                <p class="pris">Pris: 100 SEK</p>
+                <p><button><a href="under.html">Läs mer</a></button></p>
+        </div>
     </div>
     <script>
         myShow = w3.slideshow(".nature", 0);
