--- a/prepp.html
+++ b/prepp.html
@@ -48,7 +48,7 @@
                     <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
                     <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
                 </div>
-                <div class="Extern">
+                <div >
                         <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png"></a>
                         <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
                         <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
