--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     </script>
 
 <footer class="footer">
-    <div class="Validate">
+    <div>
         <a href="https://jigsaw.w3.org/css-validator/"><img class="footericons" src="./images/CSS.png"></a>
         <a href="https://validator.w3.org/"><img class="footericons" src="./images/Html.png"></a>
     </div>
-    <div class="Extern">
+    <div>
             <a href="https://www.instagram.com/?hl=sv"><img class="footericons" src="./images/Instagram.png"></a>
             <a href="https://sv-se.facebook.com/"><img class="footericons" src="./images/Facebook.png"></a>
             <a href="https://www.snapchat.com/"><img class="footericons" src="./images/Snapchat.png"></a>
