--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <nav>
         <ul>        
             <li><a href="index.html">Startsida</a></li>
-            <li><a href="produkter.html">Böcker</a></li>
+            <li><a href="produkter.html">Alla Böcker</a></li>
+            <li><a href="mat.html">Mat</a></li>
+            <li><a href="halsa.html">Hälsa</a></li>
+            <li><a href="ovrigt.html">Övrigt</a></li>
             <li><a href="Verktyg.html">Verktyg</a></li>
         </ul>       
     </nav>  
