--- a/prepp.html
+++ b/prepp.html
@@ -9,20 +9,23 @@
     <title>Document</title>
 </head>
 <body>  
-        <header>
-                <div class="top">
-                    <li><img class="topicon" src="./images/Book.png"></li>
-                    <li><h1>Webbshop</h1></li>
-                    <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
-                </div>   
-            </header>
-            <nav>
-                <ul>        
-                    <li><a href="index.html">Startsida</a></li>
-                    <li><a href="produkter.html">Böcker</a></li>
-                    <li><a href="Verktyg.html">Verktyg</a></li>
-                </ul>       
-            </nav>
+    <header>
+        <div class="top">
+            <li><img class="topicon" src="./images/Book.png"></li>
+            <li><h1>Webbshop</h1></li>
+            <li><a href="Kundkorg.html"><img class="topicon" src="./images/cart.png"></a></li>
+        </div>
+          
+    </header>
+    <nav>
+        <ul>        
+            <li><a href="index.html">Startsida</a></li>
+            <li><a href="produkter.html">Alla Böcker</a></li>
+            <li><a href="mat.html">Mat</a></li>
+            <li><a href="halsa.html">Hälsa</a></li>
+            <li><a href="ovrigt.html">Övrigt</a></li>
+        </ul>       
+    </nav>  
             <div class="produktsida">
     <div class="produkt">
             <img src="./images/prepp.jpg" alt="Produkt byt text">
